without payment integration

--- a/app/src/main/res/layout/activity_available_buses.xml
+++ b/app/src/main/res/layout/activity_available_buses.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".bus.Available_buses">
     <RelativeLayout
         android:layout_width="match_parent"
@@ -31,7 +32,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="@color/purple_700"
+        android:background="@color/gradientEnd"
         android:id="@+id/re1">
 
         <ImageView
@@ -66,13 +67,14 @@
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:layout_marginStart="15dp"
+              android:paddingStart="8dp"
+              android:paddingRight="8dp"
               android:layout_gravity="center">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Hyderabad"
-          android:textSize="18sp"
+          android:textSize="16sp"
           android:gravity="center"
           android:id="@+id/from"
           android:textStyle="bold"/>
@@ -83,14 +85,15 @@
          android:id="@+id/to1"
          android:layout_marginTop="3dp"
          android:layout_toEndOf="@id/from"
-         android:layout_marginStart="10dp"
+         android:layout_marginStart="8dp"
+         android:layout_marginEnd="8dp"
          />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Bangalore"
-          android:textSize="18sp"
-          android:layout_marginStart="10dp"
+          android:textSize="16sp"
+          android:layout_marginEnd="10dp"
           android:layout_toEndOf="@id/to1"
           android:id="@+id/to"
           android:textStyle="bold"/>
@@ -98,9 +101,9 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="26/11/2020"
-          android:textSize="18sp"
+          android:textSize="16sp"
           android:id="@+id/date1"
-          android:layout_marginEnd="20dp"
+          android:layout_marginEnd="10dp"
           android:layout_alignParentEnd="true"
           android:textStyle="bold" />
           </RelativeLayout>
