--- a/app/src/main/res/layout/activity_gas_screen.xml
+++ b/app/src/main/res/layout/activity_gas_screen.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Gas_screen">
 
     <RelativeLayout
         android:id="@+id/re1"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="@color/purple_700">
+        android:background="@color/gradientEnd">
         <ImageView
             android:id="@+id/back"
             android:layout_width="wrap_content"
@@ -41,7 +42,7 @@
         android:layout_below="@id/re1"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        app:boxStrokeColor="@color/teal_200"
+        app:boxStrokeColor="@color/gradientStart"
         >
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -58,12 +59,14 @@
         android:layout_marginTop="5dp"
         android:layout_below="@id/e_mobile"
         android:layout_marginEnd="15dp"
+        app:boxStrokeColor="@color/gradientStart"
         android:id="@+id/operator"
         android:hint="Select Operators">
         <AutoCompleteTextView
             android:id="@+id/operator_spin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="none"
             />
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
@@ -75,12 +78,14 @@
         android:layout_marginEnd="15dp"
         android:layout_below="@id/operator"
         android:id="@+id/circle_code"
+        app:boxStrokeColor="@color/gradientStart"
         android:hint="Circle code">
 
         <AutoCompleteTextView
             android:id="@+id/circle_spin"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="none"/>
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/e_amount"
@@ -92,7 +97,7 @@
         android:layout_below="@id/circle_code"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        app:boxStrokeColor="@color/teal_200">
+        app:boxStrokeColor="@color/gradientStart">
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -110,7 +115,16 @@
         android:layout_marginTop="25dp"
         android:background="@drawable/button_bg"
         android:text="Next"
-        android:textColor="#fff" />
+        android:textColor="@color/gradientStart" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/gas_items"
+        android:layout_below="@+id/next"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginTop="15dp"
+        />
 
 
 
