--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Login_screen">
 
     <RelativeLayout
@@ -14,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/bg_gradient" />
+            android:src="@drawable/background_gradiant" />
 
         <TextView
             android:id="@+id/icon1"
@@ -32,15 +33,16 @@
             android:id="@+id/icon2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
             android:layout_below="@id/icon1"
             android:layout_centerHorizontal="true"
-            android:scaleType="fitCenter"
             android:text="DilPay services Pvt Ltd"
             android:textColor="#fff"
             android:textSize="20sp"
             android:textStyle="bold" />
 
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -55,25 +57,28 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:padding="15dp">
+
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Mobile Number"
-                    app:boxStrokeColor="@color/teal_200">
+                    app:boxStrokeColor="@color/gradientStart">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/e_mobile"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:imeOptions="actionNext"
-                        android:id="@+id/e_mobile"
-                        android:inputType="number" />
+                        android:inputType="number"
+                        android:maxLength="10" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
 
                 <com.google.android.material.textfield.TextInputLayout
 
+                    android:id="@+id/passLayout"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -81,49 +86,40 @@
                     android:hint="Password"
                     android:visibility="gone"
                     app:boxStrokeColor="@color/teal_200"
-                    android:id="@+id/passLayout"
                     app:endIconMode="password_toggle">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/e_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/e_password"
                         android:imeOptions="actionDone"
                         android:inputType="textPassword" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
 
-                <TextView
-                    android:id="@+id/forgot_pwd"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_marginRight="8dp"
-                    android:padding="5dp"
-                    android:text="Forgot Password?"
-                    android:textColor="@color/colorlight"
-                    android:textSize="16sp" />
-
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/getOTP"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/button_bg"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/button_main"
                     android:text="get otp"
-                    android:textColor="#fff" />
+                    android:textColor="#fff"
+                    android:textStyle="bold" />
+
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/login"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
-                    android:background="@drawable/button_bg"
+                    android:background="@drawable/background_gradiant"
                     android:text="Login"
-                    android:visibility="gone"
-                    android:textColor="#fff" />
+                    android:textColor="#fff"
+                    android:textStyle="bold"
+                    android:visibility="gone" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -132,15 +128,16 @@
                     android:gravity="center"
                     android:text="Don't you have An Account?" />
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/signup_btn"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="20dp"
-                    android:text="Signup" />
+                    android:background="@drawable/button_bg"
+                    android:text="Signup"
+                    android:textStyle="bold" />
 
 
             </LinearLayout>
