--- a/app/src/main/res/layout/activity_support_screen.xml
+++ b/app/src/main/res/layout/activity_support_screen.xml
@@ -4,11 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Support_screen">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="@color/purple_700"
+        android:background="@color/gradientEnd"
         android:id="@+id/re1">
 
         <ImageView
@@ -40,6 +41,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginTop="10dp"
         android:id="@+id/spinner"
+        app:boxStrokeColor="@color/gradientStart"
         android:layout_below="@id/re1"
         android:hint="select your subject">
 
@@ -63,7 +65,7 @@
         android:layout_marginTop="10dp"
 
         app:endIconDrawable="@drawable/ic_baseline_location_on_24"
-        app:boxStrokeColor="@color/teal_200">
+        app:boxStrokeColor="@color/gradientStart">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -84,7 +86,7 @@
         android:layout_marginTop="10dp"
         app:endIconDrawable="@drawable/ic_baseline_location_on_24"
         android:hint="Email"
-        app:boxStrokeColor="@color/teal_200"
+        app:boxStrokeColor="@color/gradientStart"
         >
 
         <com.google.android.material.textfield.TextInputEditText
@@ -105,7 +107,7 @@
         android:layout_marginTop="10dp"
         app:endIconDrawable="@drawable/ic_baseline_location_on_24"
         android:hint="Mobile Number"
-        app:boxStrokeColor="@color/teal_200"
+        app:boxStrokeColor="@color/gradientStart"
         >
 
         <com.google.android.material.textfield.TextInputEditText
@@ -126,7 +128,7 @@
         android:layout_marginTop="10dp"
         app:endIconDrawable="@drawable/ic_baseline_location_on_24"
         android:hint="Your Query"
-        app:boxStrokeColor="@color/teal_200"
+        app:boxStrokeColor="@color/gradientStart"
         >
 
         <com.google.android.material.textfield.TextInputEditText
@@ -146,5 +148,5 @@
         android:layout_below="@id/e_query"
         android:background="@drawable/button_bg"
         android:text="Submit"
-        android:textColor="#fff" />
+        android:textColor="@color/gradientStart" />
 </RelativeLayout>
