--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -4,7 +4,8 @@
     <corners
         android:radius="8dp"
          />
+    <solid android:color="#fff"/>
     <stroke
-        android:width="1dp"
+        android:width="2dp"
         android:color="@color/gray" />
 </shape>
