--- a/app/src/main/res/layout/activity_booking_details.xml
+++ b/app/src/main/res/layout/activity_booking_details.xml
@@ -4,11 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Booking_details">
+    android:background="@color/white"
+    tools:context=".bus.Booking_details">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="@color/purple_700"
+        android:background="@color/gradientEnd"
         android:id="@+id/re1">
 
         <ImageView
@@ -145,130 +146,130 @@
                 android:layout_below="@id/view">
 
                 <RelativeLayout
+                    android:id="@+id/re4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:id="@+id/re4">
+                    android:layout_margin="10dp">
 
                     <TextView
+                        android:id="@+id/travels"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/travels"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
+                        android:text="Travels"
                         android:textColor="@color/black"
-                        android:text="Travels" />
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/bus_type"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/travels"
-                        android:id="@+id/bus_type"
-                        android:textSize="16sp"
                         android:layout_marginTop="5dp"
-                        android:text="busType" />
+                        android:text="busType"
+                        android:textSize="16sp" />
 
                     <TextView
+                        android:id="@+id/board"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/board"
-                        android:textSize="16sp"
                         android:layout_below="@id/bus_type"
                         android:layout_marginTop="5dp"
-                        android:textStyle="bold"
+                        android:text="Boarding Point"
                         android:textColor="@color/black"
-                        android:text="Boarding Point" />
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/board_point"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/board"
-                        android:id="@+id/board_point"
-                        android:textSize="16sp"
                         android:layout_marginTop="5dp"
-                        android:text="Lb nagar" />
+                        android:text="Lb nagar"
+                        android:textSize="16sp" />
 
                     <TextView
+                        android:id="@+id/dropping"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/dropping"
-                        android:textSize="16sp"
                         android:layout_below="@id/board_point"
-                        android:textStyle="bold"
                         android:layout_marginTop="5dp"
+                        android:text="Dropping Point"
                         android:textColor="@color/black"
-                        android:text="Dropping Point" />
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/drop_point"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/dropping"
-                        android:id="@+id/drop_point"
-                        android:textSize="16sp"
                         android:layout_marginTop="5dp"
-                        android:text="bangalore" />
+                        android:text="bangalore"
+                        android:textSize="16sp" />
 
                     <TextView
+                        android:id="@+id/passenger"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Passenger Details"
-                        android:id="@+id/passenger"
+                        android:layout_below="@id/drop_point"
                         android:layout_marginTop="5dp"
+                        android:text="Passenger Details"
                         android:textColor="@color/black"
                         android:textSize="16sp"
-                        android:textStyle="bold"
-                        android:layout_below="@id/drop_point" />
+                        android:textStyle="bold" />
 
                     <View
                         android:id="@+id/v1"
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
+                        android:layout_below="@id/passenger"
                         android:layout_marginTop="10dp"
-                        android:background="@color/gray"
-                        android:layout_below="@id/passenger" />
+                        android:background="@color/gray" />
 
                     <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/passDetails"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/v1"
-                        android:id="@+id/passDetails"
-                        />
+                        android:layout_below="@+id/v1" />
 
                     <TextView
+                        android:id="@+id/fare"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Fare Details"
-                        android:id="@+id/fare"
-                        android:textSize="16sp"
+                        android:layout_below="@id/passDetails"
                         android:layout_marginTop="5dp"
-                        android:textStyle="bold"
+                        android:text="Fare Details"
                         android:textColor="@color/black"
-                        android:layout_below="@id/passDetails" />
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
                     <View
                         android:id="@+id/v2"
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
+                        android:layout_below="@id/fare"
                         android:layout_marginTop="10dp"
-                        android:background="@color/gray"
-                        android:layout_below="@id/fare" />
+                        android:background="@color/gray" />
 
                     <TextView
+                        android:id="@+id/base"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Base Fare"
-                        android:layout_marginTop="5dp"
-                        android:textStyle="bold"
-                        android:textSize="16sp"
                         android:layout_below="@id/v2"
-                        android:id="@+id/base" />
+                        android:layout_marginTop="5dp"
+                        android:text="Base Fare"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
                     <LinearLayout
+                        android:id="@+id/li1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
                         android:layout_below="@id/v2"
+                        android:layout_alignParentEnd="true"
                         android:layout_marginTop="5dp"
-                        android:id="@+id/li1"
                         android:layout_marginEnd="10dp"
                         android:orientation="horizontal">
 
@@ -290,20 +291,20 @@
                     </LinearLayout>
 
                     <TextView
+                        android:id="@+id/taxes"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Taxes"
-                        android:layout_marginTop="5dp"
-                        android:textStyle="bold"
-                        android:textSize="16sp"
                         android:layout_below="@id/base"
-                        android:id="@+id/taxes" />
+                        android:layout_marginTop="5dp"
+                        android:text="Taxes"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
                         android:layout_below="@id/li1"
+                        android:layout_alignParentEnd="true"
                         android:layout_marginTop="5dp"
                         android:layout_marginEnd="10dp"
                         android:orientation="horizontal">
@@ -335,9 +336,9 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:layout_marginBottom="10dp"
-                android:background="@drawable/button_bg"
+                android:background="@drawable/background_gradiant"
                 android:text="Proceed To Cancel"
-                android:textColor="#fff" />
+                android:textColor="@color/white" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
