--- a/app/src/main/res/layout/activity_bus.xml
+++ b/app/src/main/res/layout/activity_bus.xml
@@ -4,11 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".bus.Bus">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="@color/purple_700"
+        android:background="@color/gradientEnd"
         android:id="@+id/re1">
         <ImageView
             android:id="@+id/back"
@@ -31,91 +32,118 @@
             android:textSize="18sp"
             android:layout_marginTop="25dp"/>
     </RelativeLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@id/re1"
-        android:padding="15dp">
-
-    <com.google.android.material.textfield.TextInputLayout
-
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="From"
-        android:enabled="true"
-        app:endIconDrawable="@drawable/ic_baseline_location_on_24"
-        app:boxStrokeColor="@color/teal_200">
-
-        <com.google.android.material.textfield.TextInputEditText
+    <ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+        android:layout_below="@+id/re1">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:imeOptions="actionNext"
-            android:id="@+id/e_from"
-            android:inputType="textAutoComplete" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="15dp">
 
-    <com.google.android.material.textfield.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
 
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        app:endIconDrawable="@drawable/ic_baseline_location_on_24"
-        android:hint="To"
-        app:boxStrokeColor="@color/teal_200">
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/e_to"
-            android:inputType="textAutoComplete"
-            android:imeOptions="actionDone"/>
-    </com.google.android.material.textfield.TextInputLayout>
-      <com.google.android.material.textview.MaterialTextView
-          android:layout_width="match_parent"
-          android:layout_height="45dp"
-          android:text="Depart Date"
-          android:id="@+id/date1"
-          android:padding="10dp"
-          android:background="@drawable/date_back"
-          android:layout_marginTop="15dp"
-          android:textColor="#000"/>
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/search"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="25dp"
-            android:background="@drawable/button_bg"
-            android:text="Search"
-            android:textColor="#fff" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textSize="16sp"
-            android:padding="10dp"
-            android:textColor="@color/error"
-            android:id="@+id/error"
-            android:layout_gravity="center_horizontal"
-            />
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="From"
+                    android:enabled="true"
+                    app:endIconDrawable="@drawable/ic_baseline_location_on_24"
+                    app:boxStrokeColor="@color/gradientStart">
 
+                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:completionThreshold="1"
+                        android:imeOptions="actionNext"
+                        android:padding="10dp"
+                        android:id="@+id/e_from"
+                        android:inputType="textAutoComplete" />
 
-    </LinearLayout>
+                </com.google.android.material.textfield.TextInputLayout>
+<!--                <AutoCompleteTextView-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:completionThreshold="1"-->
+<!--                    android:id="@+id/e_from"-->
+<!--                    android:hint="From"-->
+<!--                    android:padding="10dp"-->
+<!--                    />-->
 
-    <RelativeLayout
-        android:id="@+id/progress_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#EDFFFFFF"
-        android:visibility="gone">
+                <com.google.android.material.textfield.TextInputLayout
 
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true" />
-    </RelativeLayout>
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    app:endIconDrawable="@drawable/ic_baseline_location_on_24"
+                    android:hint="To"
+                    app:boxStrokeColor="@color/gradientStart">
+                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/e_to"
+                        android:completionThreshold="1"
+                        android:padding="10dp"
+                        android:inputType="textAutoComplete"
+                        android:imeOptions="actionDone"/>
+                </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:text="Depart Date"
+                    android:id="@+id/date1"
+                    android:padding="10dp"
+                    android:background="@drawable/date_back"
+                    android:layout_marginTop="15dp"
+                    android:textColor="#000"/>
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/search"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="25dp"
+                    android:background="@drawable/button_bg"
+                    android:text="Search"
+                    android:textStyle="bold"
+                    android:textColor="@color/gradientStart" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="16sp"
+                    android:padding="10dp"
+                    android:textColor="@color/error"
+                    android:id="@+id/error"
+                    android:layout_gravity="center_horizontal"
+                    />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/bus_items"
+                    />
+            </LinearLayout>
+
+            <RelativeLayout
+                android:id="@+id/progress_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#EDFFFFFF"
+                android:visibility="gone">
+
+                <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true" />
+            </RelativeLayout>
+
+        </LinearLayout>
+</ScrollView>
 
 </RelativeLayout>
