--- a/app/src/main/res/layout/activity_bus_details_confirmation.xml
+++ b/app/src/main/res/layout/activity_bus_details_confirmation.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".bus.busDetailsConfirmation">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="@color/purple_700"
+        android:background="@color/gradientEnd"
         android:id="@+id/re1">
 
         <ImageView
@@ -298,7 +299,7 @@
                         android:textStyle="bold"
                         android:textSize="16sp"
                         android:layout_below="@id/base"
-                        android:id="@+id/taxes" />
+                        android:id="@+id/taxe" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -317,7 +318,7 @@
                             android:src="@drawable/rupee_indian" />
 
                         <TextView
-                            android:id="@+id/amount1"
+                            android:id="@+id/taxes"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_toEndOf="@id/rupee"
@@ -333,13 +334,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:layout_centerHorizontal="true"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
-                android:layout_alignParentBottom="true"
                 android:layout_marginBottom="10dp"
-                android:background="@drawable/button_bg"
+                android:background="@drawable/button_main"
                 android:text="Proceed To Payment"
+                android:textStyle="bold"
                 android:textColor="#fff" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
