--- a/app/src/main/res/layout/activity_bus_seating.xml
+++ b/app/src/main/res/layout/activity_bus_seating.xml
@@ -4,10 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".bus.Bus_seating">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         android:id="@+id/progress">
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/animationView"
@@ -31,7 +33,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="@color/purple_700"
+        android:background="@color/gradientEnd"
         android:id="@+id/re1">
         <ImageView
             android:id="@+id/back"
@@ -45,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Bus Seating"
-            android:id="@+id/te1"
+            android:id="@+id/travel_name"
             android:textStyle="bold"
             android:textColor="#fff"
             android:layout_centerHorizontal="true"
@@ -61,82 +63,23 @@
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_above="@+id/details"
             >
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/li2"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:layout_gravity="center"
-                        android:gravity="end"
-                        android:layout_marginEnd="4dp"
-                        android:text="available"/>
-                    <ImageView
-                        android:layout_width="0dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:src="@drawable/available_seat"
-                        />
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:layout_gravity="center"
-                        android:gravity="end"
-                        android:layout_marginEnd="4dp"
-                        android:text="Select"/>
-                    <ImageView
-                        android:layout_width="0dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:layout_marginStart="5dp"
-                        android:src="@drawable/seat_select"/>
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:layout_gravity="center"
-                        android:gravity="end"
-                        android:layout_marginEnd="4dp"
-                        android:text="Booked"/>
-                    <ImageView
-                        android:layout_width="0dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:layout_marginStart="5dp"
-                        android:src="@drawable/seat_booked"/>
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:layout_gravity="center"
-                        android:gravity="end"
-                        android:layout_marginEnd="4dp"
-                        android:text="Ladies"/>
-                    <ImageView
-                        android:layout_width="0dp"
-                        android:layout_height="40dp"
-                        android:layout_weight="1"
-                        android:src="@drawable/seatbooked"
-                        />
-                </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_gravity="center"
                     android:id="@+id/selectIndex"
-                    android:visibility="gone"
+                    android:layout_marginTop="10dp"
+                    android:visibility="visible"
+                    android:padding="0dp"
+                    android:background="@drawable/border"
                     android:gravity="center">
 
                     <TextView
@@ -145,7 +88,8 @@
                         android:text="Lower"
                         android:textSize="18sp"
                         android:padding="8dp"
-                        android:background="@color/purple_700"
+                        android:textColor="#fff"
+                        android:background="@drawable/btn_left_active"
                         android:id="@+id/lowerText"
                         android:paddingStart="15dp"
                         android:paddingEnd="15dp"
@@ -157,105 +101,119 @@
                         android:textStyle="bold"
                         android:textSize="18sp"
                         android:padding="8dp"
+                        android:background="@drawable/btn_right"
+                        android:textColor="@color/gradientStart"
                         android:paddingStart="15dp"
                         android:paddingEnd="15dp"
                         android:id="@+id/upperText"
                         android:text="Upper"/>
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="5dp"
-                    android:background="@drawable/border"
-                    android:layout_marginStart="60dp"
-                    android:layout_marginEnd="60dp"
-                    android:layout_marginTop="10dp"
-                    >
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_gravity="end"
-                        android:layout_marginEnd="10dp"
-                        android:src="@drawable/bus_steering"
-                        />
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/gray"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"/>
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:padding="25dp">
+                    <LinearLayout
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:id="@+id/seater"/>
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:layout_width="match_parent"
+                        android:orientation="vertical"
+                        android:padding="5dp"
+                        android:layout_weight="2"
+                        android:background="@drawable/border"
+                        >
+                        <ImageView
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:layout_gravity="end"
+                            android:layout_marginEnd="10dp"
+                            android:src="@drawable/bus_steering"
+                            />
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:background="@color/gray"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"/>
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/seater"/>
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/upper"/>
+
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:id="@+id/upper"/>
+                        android:id="@+id/li2"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:padding="10dp"
+                        android:orientation="vertical">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="2"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:layout_marginTop="20dp"
+                            android:text="Available"/>
+                        <ImageView
+                            android:layout_width="40dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:src="@drawable/available_seat"
+                            />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="2"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:layout_marginTop="20dp"
+                            android:text="Selected"/>
+                        <ImageView
+                            android:layout_width="40dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
 
-
+                            android:src="@drawable/seat_select"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="2"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:layout_marginTop="20dp"
+                            android:text="Booked"/>
+                        <ImageView
+                            android:layout_width="40dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:src="@drawable/seat_booked"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="2"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:layout_marginTop="20dp"
+                            android:text="Ladies"/>
+                        <ImageView
+                            android:layout_width="40dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:src="@drawable/seatbooked"
+                            />
+                    </LinearLayout>
                 </LinearLayout>
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_below="@id/re2" >
 
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Selected seats:"
-                        android:id="@+id/seat_num"
-                        android:layout_marginTop="10dp"
-                        android:textStyle="bold"
-                        android:layout_marginStart="25dp"
-                        />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text=""
-                        android:textSize="14sp"
-                        android:layout_marginTop="10dp"
-                        android:id="@+id/seatsSelected"
-                        android:textStyle="bold"
-                        android:layout_toRightOf="@id/seat_num" />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Amount : "
-                        android:id="@+id/amount"
-                        android:layout_marginTop="10dp"
-                        android:textStyle="bold"
-                        android:layout_marginStart="25dp"
-                        android:layout_below="@id/seat_num" />
-
-                    <TextView
-                        android:id="@+id/amount1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:layout_toRightOf="@id/amount"
-                        android:text=""
-                        android:textSize="14sp"
-                        android:layout_below="@id/seatsSelected"
-                        android:textStyle="bold" />
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/selectDrop"
-                        android:layout_width="200dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginBottom="10dp"
-                        android:layout_below="@id/amount"
-                        android:text="Done"
-                        android:background="@drawable/button_bg"
-                        android:textColor="#fff" />
-                </RelativeLayout>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -263,7 +221,74 @@
                     android:text=""/>
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/details"
+            android:layout_marginTop="10dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/gradientEnd"
+            >
 
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Selected seats:"
+                android:id="@+id/seat_num"
+                android:layout_marginTop="10dp"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:layout_marginStart="25dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textSize="16sp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="8dp"
+                android:id="@+id/seatsSelected"
+                android:textStyle="bold"
+                android:layout_toRightOf="@id/seat_num" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Amount : "
+                android:id="@+id/amount"
+                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:layout_marginTop="10dp"
+                android:textStyle="bold"
+                android:layout_marginStart="25dp"
+                android:layout_below="@id/seat_num" />
+
+            <TextView
+                android:id="@+id/amount1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="8dp"
+                android:layout_toRightOf="@id/amount"
+                android:text=""
+                android:textSize="16sp"
+                android:layout_below="@id/seatsSelected"
+                android:textStyle="bold" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/selectDrop"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="20dp"
+                android:layout_below="@id/amount"
+                android:text="Done"
+                android:textStyle="bold"
+                android:background="@drawable/button_bg"
+                android:textColor="@color/gradientStart" />
+        </RelativeLayout>
     </RelativeLayout>
 
 
