--- a/app/src/main/res/layout/activity_electricity_recharge_screen.xml
+++ b/app/src/main/res/layout/activity_electricity_recharge_screen.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".electricity.Electricity_recharge_screen">
     <RelativeLayout
         android:id="@+id/re1"
