--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Home_screen">
 
 <LinearLayout
@@ -280,8 +281,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:itemIconTint="#FA1C0C"
-        app:itemTextColor="#FA1C0C"
+        app:itemIconTint="@color/gradientEnd"
+        app:itemTextColor="@color/gradientEnd"
         app:menu="@menu/bottom_nav_menu"/>
 
 </RelativeLayout>
