--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".More">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="@color/purple_700"
+        android:background="@color/gradientEnd"
         android:id="@+id/re1">
 
         <ImageView
@@ -70,7 +71,7 @@
                 android:text="About Us"
                 android:textColor="#fff"
                 android:textSize="18sp"
-                android:background="@drawable/bg_gradient" />
+                android:background="@drawable/background_gradiant" />
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
@@ -92,7 +93,7 @@
                 android:text="Contact Us"
                 android:textColor="#fff"
                 android:textSize="18sp"
-                android:background="@drawable/bg_gradient" />
+                android:background="@drawable/background_gradiant" />
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
@@ -114,7 +115,7 @@
                 android:text="Privacy Policy"
                 android:textColor="#fff"
                 android:textSize="18sp"
-                android:background="@drawable/bg_gradient" />
+                android:background="@drawable/background_gradiant" />
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
@@ -136,7 +137,7 @@
                 android:text="Terms and Conditions"
                 android:textColor="#fff"
                 android:textSize="18sp"
-                android:background="@drawable/bg_gradient" />
+                android:background="@drawable/background_gradiant" />
         </androidx.cardview.widget.CardView>
 
 
@@ -159,7 +160,7 @@
                 android:text="Frequently Asked Questions"
                 android:textColor="#fff"
                 android:textSize="18sp"
-                android:background="@drawable/bg_gradient" />
+                android:background="@drawable/background_gradiant" />
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
@@ -181,7 +182,7 @@
                 android:text="Support"
                 android:textColor="#fff"
                 android:textSize="18sp"
-                android:background="@drawable/bg_gradient" />
+                android:background="@drawable/background_gradiant" />
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 </RelativeLayout>
