--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Profile">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/purple_700"
+        android:layout_height="140dp"
+        android:background="@color/gradientEnd"
         android:orientation="vertical"
         android:padding="10dp">
 
@@ -16,7 +18,7 @@
             android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="8dp"
+            android:padding="10dp"
             android:src="@drawable/ic_baseline_chevron_left_24" />
 
         <TextView
@@ -25,6 +27,7 @@
             android:layout_height="wrap_content"
             android:textColor="#fff"
             android:text="Sagar"
+            android:paddingTop="20dp"
             android:layout_marginStart="15dp"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -35,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1234567890"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="15dp"
             android:textColor="#fff" />
 
         <TextView
@@ -43,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="sagar@123"
+            android:text=""
             android:layout_marginStart="10dp"
             android:textColor="#fff" />
 
@@ -53,7 +56,7 @@
         android:id="@+id/customer_profilepic"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="80dp"
         android:layout_alignParentEnd="true"
         android:scaleType="fitCenter"
         android:src="@drawable/person"
@@ -62,26 +65,27 @@
         app:civ_border_color="#fff"
         app:civ_border_width="2dp" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lin1"
         android:layout_marginTop="30dp"
         android:padding="10dp"
         android:layout_below="@id/customer_profilepic"
-        android:orientation="horizontal">
+        >
         <ImageView
             android:layout_width="30dp"
             android:id="@+id/airtel"
             android:layout_height="30dp"
             android:layout_marginStart="15dp"
-            android:src="@drawable/qr_code"
+            android:src="@drawable/member"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/airtel1"
-            android:text="My QR Code"
+            android:layout_toRightOf="@id/airtel"
+            android:text="Membership"
             android:textStyle="bold"
             android:transitionName="trans1"
             android:textColor="#000"
@@ -89,7 +93,19 @@
             android:textSize="14sp"
             android:layout_marginTop="6dp"
             />
-    </LinearLayout>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/selectDrop"
+            android:layout_width="100dp"
+            android:layout_height="30dp"
+            android:layout_gravity="bottom"
+            android:background="@drawable/button_bg"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="15dp"
+            android:text="Upgrade"
+            android:textColor="@color/gradientStart"
+            android:textStyle="bold" />
+    </RelativeLayout>
 
 
     <View
@@ -288,34 +304,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/purple_700"
+        android:background="@color/gradientEnd"
         android:orientation="horizontal">
 
-    <LinearLayout
-        android:id="@+id/add_post_ll"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:paddingBottom="2dp"
-        android:visibility="visible">
+<!--    <LinearLayout-->
+<!--        android:id="@+id/add_post_ll"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentLeft="true"-->
+<!--        android:layout_weight="1"-->
+<!--        android:orientation="vertical"-->
+<!--        android:paddingBottom="2dp"-->
+<!--        android:visibility="visible">-->
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_gravity="center"
-            android:padding="6dp"
-            android:src="@drawable/ic_baseline_edit_24" />
+<!--        <ImageView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="35dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:padding="6dp"-->
+<!--            android:src="@drawable/ic_baseline_edit_24" />-->
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textColor="#fff"
-            android:layout_marginBottom="3dp"
-            android:text="Change Password" />
-    </LinearLayout>
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:textColor="#fff"-->
+<!--            android:layout_marginBottom="3dp"-->
+<!--            android:text="Change Password" />-->
+<!--    </LinearLayout>-->
 
     <LinearLayout
         android:id="@+id/logout"
@@ -323,7 +339,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:paddingBottom="2dp">
+        android:padding="2dp">
 
         <ImageView
             android:layout_width="wrap_content"
